# movie-genie

./: .dockerignore  .env.example  .gitignore  .gitignore.tmp2  DVC_USAGE.md  Dockerfile.backend  Dockerfile.docs  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  dvc.yaml  dvc.yaml.backup  mkdocs.yml  params.yaml  pyproject.toml
backend/templates/: index.html
configs/: bert4rec.yaml  data.yaml  evaluation.yaml  mlflow.yaml  semantic_search.yaml  test_two_tower.yaml  two_tower.yaml
data/: eda.ipynb
docker/: nginx.conf
docs/: README.md  commands.md  index.md  to-do.md  two_tower.md
docs/backend-frontend/: README.md  api-reference.md  backend-integration.md  index.md  ml-integration.md
docs/data-pipeline/: README.md  index.md
docs/getting-started/: README.md  commands-reference.md  common-workflows.md  index.md  installation.md  project-overview.md  quick-start.md  tutorial.md
docs/how-to-guides/: add-new-model.md  application-management.md  docker-deployment.md  dvc-pipeline.md  index.md  mlflow-integration.md  serve-recommendations.md  train-models.md
docs/machine-learning/: README.md  bert4rec.md  evaluation.md  index.md  models-overview.md  semantic-search.md
docs/mlflow/: dashboard-implementation.md  index.md  integration-summary.md  setup.md
docs/reference/: configuration.md  index.md  project-structure.md  technology-stack.md
docs/troubleshooting/: README.md  index.md
metrics/: .gitignore
results/: .gitignore
scripts/: app.sh  diagnose_ranking_correlation.py  docs.sh  evaluate_individual_models.py  evaluate_integrated_system.py  extract_content_features.py  extract_tmdb_features.py  ingest_data.py  process_imdb_reviews.py  process_review_features.py  process_sequential_data.py  run_full_pipeline.py  run_web_app.py  scrape_imdb_reviews.py  serve_docs.sh  simple_ranking_diagnosis.py  start_server.py  stop_server.sh  test_db.py  test_embedding_loader.py  test_personalized_reranker.py  test_query_encoder.py  test_semantic_search.py  test_semantic_search_consistency.py  train_bert4rec.py  train_two_tower.py
site/: 404.html  index.html  sitemap.xml
tests/: README.md  conftest.py  test_edge_cases.py  test_endpoints.py  test_loaders.py  test_new_endpoints.py  test_temporal_splitting.py  test_two_tower_integration.py
(+86 files in other folders)
