[project]
name = "movie-genie"
version = "0.1.0"
description = "Production-ready MovieLens recommender system with sequential learning and LLM integration"
authors = [{name = "Anas Buhayh", email = "anas.buhayh@colorado.edu"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-sqlalchemy>=3.0.0",
    "gunicorn>=21.2.0",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "mlflow>=2.9.0",
    "dvc>=3.0.0",
    "pyarrow>=14.0.0",
]
llm = [
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
movie-genie = "movie_genie.cli:main"